--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -96,6 +96,7 @@ a{
 }
 
 .form-item{
+  position: relative;
   width: size(406, 1905);
   display: flex;
   flex-direction: column;
@@ -129,7 +130,10 @@ a{
     &:focus{
       border: 1px solid #4F8CFF;
       box-shadow: 0px 0px size(5, 1905) rgba(79, 140, 255, 0.25);
-      border-radius: 5px;
+      border-radius: size(5, 1905);
+    }
+    &:active{
+      background: white;
     }
   }
   textarea{
@@ -220,22 +224,25 @@ a{
 
 // validate
 
+.error{
+  border: 1px solid #EE5173 !important;
+  box-shadow: 0px 0px 5px rgba(253, 86, 122, 0.25);
+}
+
 .msg-error{
   position: absolute;
-  top: size(75, 1905);
   font-style: normal;
   font-weight: normal;
   font-size: size(11, 1905);
   line-height: size(16, 1905);
   color: #EE5173;
   @media (max-width: 744px){
-    top: size(75, 744);
     font-size: size(11, 744);
     line-height: size(16, 744);
   }
   @media (max-width: 320px){
-    top: size(70, 320);
     font-size: size(11, 320);
     line-height: size(16, 320);
   }
 }
+
